--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,8 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "private": true,
+  "proxy": "http://localhost:3001",
+  "private": true,  
   "dependencies": {
     "@apollo/client": "^3.5.6",
     "@testing-library/jest-dom": "^5.16.1",
