--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "proxy": "http://localhost:3001",
-  "private": true,  
+  "private": true,
   "dependencies": {
     "@apollo/client": "^3.5.6",
     "@testing-library/jest-dom": "^5.16.1",
@@ -11,6 +11,7 @@
     "graphql": "^16.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.2"
   },
